CVS - Eric Kidd <eric.kidd@pobox.com> - Ongoing

  * Abstract XML parser API (but you'll need to edit makefiles to use it).
  * Integrated Electric Fence into build system (optional).
  * Support for building and parsing XML-RPC values using wchar_t strings.
  * Basic UTF-8 handling: Refuse to process invalid UTF-8 from network,
    print warnings when sending invalid UTF-8 *to* network.
  * Highly robust UTF-8 validator, decoder, encoder.
  * RedHat 7 warning fixes.
  * Modularized the build system--build only what you need.
  * Implemented a configurable size limit for XML data off the network.
  * Fixed all recent, reproducible bugs in CVS. These were generally
    Windows build bugs.

0.9.8 - Eric Kidd <eric.kidd@pobox.com> - 19 February 2001

  * J. Alan Eldridge, Rosimildo daSIlva: Build fixes.
  * Send 'encoding="UTF-8"' in XML prologue.

0.9.7 - Eric Kidd <eric.kidd@pobox.com> - 14 February 2001

  * SECURITY: Configurable nesting limits (see advisory 1) to prevent
    denial-of-service attacks and stack overflow.
  * Win32 build fixes from Alex Olugbile.
  * Function name fix from Luke Howard.

0.9.6w - Eric Kidd <eric.kidd@pobox.com> - 02 February 2001

  * Merged Win32 VC/C++ changes from Alex and Ian.
  * Merged Win32 Cygwin changes from Rosimildo.

0.9.6 - Eric Kidd <eric.kidd@pobox.com> - 30 January 2001

  * Fixed lots of gcc warnings.
  * Added a new 'xmlrpc_server_info' class, which allows you to
    set options on a per-server basis.
  * Added support for HTTP Basic authentication.
  * Added internal implementation of system.multicall, lots of brutal test
    cases, and stubs for other system.* commands.
  * Added APIs for accessing CGI and Abyss method registries.
  * Implemented system.listMethods, system.methodHelp, system.methodSignature.
  * Fixed stupid bug in parsing of "(ss*)"-style array descriptions
    where there were no extra elements.
  * Added highly experimental hacked copy of mod_gzip into the